--- a/src/vista/PanelFactura.form
+++ b/src/vista/PanelFactura.form
@@ -72,8 +72,6 @@
                           <Component id="panelBuscar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="btnAgregar" alignment="0" pref="181" max="32767" attributes="0"/>
-                              <Component id="btnEditar" alignment="0" pref="181" max="32767" attributes="0"/>
                               <Component id="btnEliminar" alignment="0" pref="181" max="32767" attributes="0"/>
                               <Component id="btnActualizar" max="32767" attributes="0"/>
                           </Group>
@@ -96,12 +94,8 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="btnAgregar" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
                                   <Component id="btnActualizar" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="btnEditar" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="btnEliminar" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="panelBuscar" alignment="0" max="32767" attributes="0"/>
@@ -116,18 +110,6 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="btnEditar">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Aharoni" size="14" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Editar"/>
-            <Property name="toolTipText" type="java.lang.String" value=""/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditarActionPerformed"/>
-          </Events>
-        </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane2">
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -315,12 +297,12 @@
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="lblCrudNombre" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txtClienteId" min="-2" pref="217" max="-2" attributes="0"/>
+                              <Component id="txtCrudClienteId" min="-2" pref="217" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="lblCrudCantidad" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txtPagoId" min="-2" pref="218" max="-2" attributes="0"/>
+                              <Component id="txtCrudPagoId" min="-2" pref="218" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -329,22 +311,20 @@
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jDateFecha" max="32767" attributes="0"/>
-                                  <Component id="txtTipoVentaId" pref="218" max="32767" attributes="0"/>
+                                  <Component id="jDateCrudFecha" max="32767" attributes="0"/>
+                                  <Component id="txtCrudTipoVentaId" pref="218" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="1" attributes="0">
-                                  <Component id="lblCrudCodigo" max="32767" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txtCrudId" min="-2" pref="219" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                  <Component id="lblCrudlPrecio" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                                  <Component id="txtEmpleadoId" min="-2" pref="218" max="-2" attributes="0"/>
-                              </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="lblCrudCodigo" max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="txtCrudId" min="-2" pref="219" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="lblCrudlPrecio" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                              <Component id="txtCrudEmpleadoId" min="-2" pref="218" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -361,28 +341,28 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtClienteId" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtCrudClienteId" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblCrudNombre" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblCrudlPrecio" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtEmpleadoId" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtCrudEmpleadoId" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtPagoId" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtCrudPagoId" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblCrudCantidad" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtTipoVentaId" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtCrudTipoVentaId" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblCrudPrecioVenta" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="lblCrudPrecioVenta1" min="-2" max="-2" attributes="0"/>
-                          <Component id="jDateFecha" min="-2" max="-2" attributes="0"/>
+                          <Component id="jDateCrudFecha" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="74" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -419,7 +399,7 @@
                 <Property name="text" type="java.lang.String" value="Id Cliente:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtClienteId">
+            <Component class="javax.swing.JTextField" name="txtCrudClienteId">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Aharoni" size="14" style="0"/>
@@ -434,7 +414,7 @@
                 <Property name="text" type="java.lang.String" value="Id Pago:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtTipoVentaId">
+            <Component class="javax.swing.JTextField" name="txtCrudTipoVentaId">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Aharoni" size="14" style="0"/>
@@ -449,7 +429,7 @@
                 <Property name="text" type="java.lang.String" value="Id Empleado:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtPagoId">
+            <Component class="javax.swing.JTextField" name="txtCrudPagoId">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Aharoni" size="14" style="0"/>
@@ -464,7 +444,7 @@
                 <Property name="text" type="java.lang.String" value="Id Tipo Venta:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtEmpleadoId">
+            <Component class="javax.swing.JTextField" name="txtCrudEmpleadoId">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Aharoni" size="14" style="0"/>
@@ -500,7 +480,7 @@
                 <Property name="text" type="java.lang.String" value="Fecha:"/>
               </Properties>
             </Component>
-            <Component class="com.toedter.calendar.JDateChooser" name="jDateFecha">
+            <Component class="com.toedter.calendar.JDateChooser" name="jDateCrudFecha">
             </Component>
           </SubComponents>
         </Container>
@@ -577,18 +557,6 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="btnAgregar">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Aharoni" size="14" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Agregar"/>
-            <Property name="toolTipText" type="java.lang.String" value="Agregar un nuevo producto al inventario"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAgregarActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JButton" name="btnEliminar">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
