--- a/src/vista/Produccion.form
+++ b/src/vista/Produccion.form
@@ -54,7 +54,6 @@
                           <Component id="jPanel6" max="32767" attributes="0"/>
                           <Component id="btn_finVenta" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -162,7 +161,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="bntBuscarProductoFact" min="-2" pref="137" max="-2" attributes="0"/>
-                  <EmptySpace pref="13" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
@@ -252,13 +251,11 @@
                               <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="etiqueta_cajero" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="jLabel3" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jLabel3" max="32767" attributes="0"/>
                   </Group>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -352,7 +349,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="cajaCantidadProdFact" max="32767" attributes="0"/>
-                      <Component id="btnBorrarPro" pref="65" max="32767" attributes="0"/>
+                      <Component id="btnBorrarPro" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -388,7 +385,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/delete_delete_exit_1577.png"/>
+              <Image iconType="3" name="/Imagenes/delete_delete_exit_1577.png"/>
             </Property>
           </Properties>
         </Component>
@@ -398,7 +395,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/arrowdown_flech_1539.png"/>
+              <Image iconType="3" name="/Imagenes/arrowdown_flech_1539.png"/>
             </Property>
           </Properties>
         </Component>
@@ -418,7 +415,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/uparrow_arriba_1538.png"/>
+              <Image iconType="3" name="/Imagenes/uparrow_arriba_1538.png"/>
             </Property>
           </Properties>
         </Component>
